--- a/HTML/pigpen.html
+++ b/HTML/pigpen.html
@@ -51,7 +51,9 @@
 
             <div id="crypt-mapping" class="group block">
                 <h3 id="mapping-direction">Encrypts To</h3>
-                <div id="mapping" class="grid"></div>
+                <div id="mapping" class="grid">
+                    
+                </div>
             </div>
 
             <div id="crypt-cyphertext" class="group block">
@@ -73,7 +75,8 @@
                 <div id="cyphertext-chart" class="chart"></div>
             </div>
         </section>
-
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="/JS/pigpen.js"></script>
     </main>
 
