--- a/HTML/pigpen.html
+++ b/HTML/pigpen.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/CSS/Style.css">
 </head>
 
-<body onload="setup( PIGPEN );">
+<body>
 
     <header id="mainheader">
         <h1>The Pigpen Cypher <a target="_blank" href="https://en.wikipedia.org/wiki/Pigpen_cipher"><i class="icon-link-ext"></i></a></h1>
