--- a/HTML/pigpen.html
+++ b/HTML/pigpen.html
@@ -23,7 +23,7 @@
 
             <div id="plaintext" class="group">
                 <h3 style="font-size: 24px;">Plain Text</h3>
-                <input type="text" id="plaintext-text" class="plaintext-text" pattern="[A-Za-z\s]+" oninput="convertToPigpen()">
+                <input type="text" value="Hello world" id="plaintext-text" class="plaintext-text" pattern="[A-Za-z\s]+" oninput="convertToPigpen()">
             </div>
 
             <div id="options" class="group">
@@ -68,19 +68,21 @@
 
             <div id="plaintext-freq" class="group">
                 <h3>Plain Text Letter Frequency</h3>
-                <div id="plaintext-chart" class="chart"></div>
+                <canvas id="plaintext-chart" class="chart"></canvas>
             </div>
 
             <div id="cyphertext-freq" class="group">
                 <h3 class="cypher">Cypher Text Symbol Frequency</h3>
-                <div id="cyphertext-chart" class="chart"></div>
+                <canvas id="cyphertext-chart" class="chart"></canvas>
             </div>
+            
         </section>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script src="/JS/pigpen.js"></script>
+        
     </main>
-
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="/JS/pigpen.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
 </html>
