update highlight and char

--- a/HTML/caesar.html
+++ b/HTML/caesar.html
@@ -19,7 +19,7 @@
 
             <div id="plaintext" class="group">
                 <h3>Plain Text</h3>
-                <input type="text" id="plaintext-text" class="plaintext-text" oninput="convertToCaesar()"> 
+                <input type="text"  value="HELLO WORLD" id="plaintext-text" class="plaintext-text" oninput="convertToCaesar()"> 
             </div>
 
             <div id="options" class="group">
@@ -61,12 +61,7 @@
 
             <div id="plaintext-freq" class="group">
                 <h3>Plain Text Letter Frequency</h3>
-                <div id="plaintext-chart" class="chart"></div>
-            </div>
-
-            <div id="cyphertext-freq" class="group">
-                <h3 class="cypher">Cypher Text Letter Frequency</h3>
-                <div id="cyphertext-chart" class="chart"></div>
+                <canvas id="plaintext-chart" class="chart"></canvas>
             </div>
         </section>
         
